The second stage of the Spool reworkening!!
This brings the end of the `ConcurrentChunk`, a class that has plagued this mod for months at this point. All class rewrites have been fully mixinized, and a lot of intermod compat has been stuffed into Spool base. This rework greatly increases performance, but more importantly, it boosts Spool's compatibility further than ever before. Spool should be intrinsically compatible with many mods, as its mixins are non-invasive and it no longer rewrites large parts of the game.

If it says anything, I couldn't even get an error to pop up in the log. It's good.

Also some miscellaneous cleanup of warnings but who cares about that :3